Do not allow the second instance of Partition Manager.

BUG: 365882